# trapstreet-solutions

./: .gitignore  README.md
agents-in-situationship-multi-model/: .gitignore  pyproject.toml  solution.py  trap.yaml
claude-pdf/: pyproject.toml  solution.py  trap.yaml
cuad-baseline/: pyproject.toml  solution.py  trap.yaml
cuad-multi-model/: pyproject.toml  solution.py  trap.yaml
docling-claude/: pyproject.toml  solution.py  trap.yaml
marker-claude/: pyproject.toml  solution.py  trap.yaml
mbti-multi-model/: pyproject.toml  solution.py  trap.yaml
mbti-multi-model/.results/: claude-haiku-4-5.json  claude-opus-4-7.json  claude-sonnet-4-6.json  deepseek_deepseek-v4-pro.json  meta-llama_llama-4-maverick.json  minimax_minimax-m2.7.json  moonshotai_kimi-k2.6.json  openai_gpt-5.5.json  qwen_qwen3-235b-a22b.json  x-ai_grok-4.3.json
mineru-claude/: pyproject.toml  solution.py  trap.yaml
python-deterministic/: pyproject.toml  solution.py  trap.yaml
worldcup-multi-model/: README.md  predict.sh  pyproject.toml  solution.py  summary.py  trap.yaml
worldcup-multi-model/predictions/: wc26_20260628_RSA_CAN__claude-opus-4-8.json  wc26_20260628_RSA_CAN__claude-sonnet-4-6.json  wc26_20260628_RSA_CAN__openai_gpt-5.5.json
