[project]
name = "agents-in-situationship-multi-model-solution"
version = "0.1.0"
description = "Routes the 20-question situationship quiz to any of 10 models (Claude family + 7 OpenRouter models)"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "trap @ git+https://github.com/AntiNoise-ai/trap.git@feat/tp-submit",
]
