[project]
name = "mbti-multi-model-solution"
version = "0.1.0"
description = "Routes MBTI questionnaire to any of 7 models (Claude family + OpenRouter)"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",                                  # OpenRouter speaks OpenAI-compatible
    "trap @ git+https://github.com/AntiNoise-ai/trap.git@feat/tp-submit",
]
